--- a/locales/es/home.json
+++ b/locales/es/home.json
@@ -1,6 +1,6 @@
 {
   "hero": {
-    "welcome": "Bienvenido a SGP Yoga",
-    "subtitle": "Encuentra tu paz interior en el corazón de la Ciudad de México"
+    "welcome": "Respira. Fluye. Transforma.",
+    "subtitle": "Encuentra tu lugar en un mundo en evolución."
   }
 }
