--- a/locales/en/home.json
+++ b/locales/en/home.json
@@ -5,6 +5,7 @@
   },
   "classes": {
     "title": "Yoga Classes",
-    "subtitle": "Step into the flow following the guidance of our expert teachers. We offer a variety of yoga styles such as Vinyasa, Hatha, Kundalini and Aerial Yoga - so that everyone can find what they need. See you on the mat!"
+    "subtitle": "Step into the flow following the guidance of our expert teachers. We offer a variety of yoga styles such as Vinyasa, Hatha, Kundalini and Aerial Yoga - so that everyone can find what they need. See you on the mat!",
+    "exploreButton": "Explore Classes"
   }
 }
