added quote section to the homepage

--- a/locales/en/home.json
+++ b/locales/en/home.json
@@ -7,5 +7,8 @@
     "title": "Yoga Classes",
     "subtitle": "Step into the flow following the guidance of our expert teachers. We offer a variety of yoga styles such as Vinyasa, Hatha, Kundalini and Aerial Yoga - so that everyone can find what they need. See you on the mat!",
     "exploreButton": "Explore Classes"
+  },
+  "quote": {
+    "text": "What you may become is inconsequential in comparison to what you already are."
   }
 }
