--- a/locales/es/home.json
+++ b/locales/es/home.json
@@ -7,5 +7,8 @@
     "title": "Clases de Yoga",
     "subtitle": "Entra en el flujo siguiendo la guía de nuestros maestros expertos. Ofrecemos una variedad de estilos de yoga como Vinyasa, Hatha, Kundalini y Yoga Aéreo - para que todos puedan encontrar lo que necesitan. ¡Te esperamos en el tapete!",
     "exploreButton": "Explorar Clases"
+  },
+  "quote": {
+    "text": "Lo que puedas llegar a ser es irrelevante en comparación con lo que ya eres."
   }
 }
