--- a/locales/en/home.json
+++ b/locales/en/home.json
@@ -5,10 +5,15 @@
   },
   "classes": {
     "title": "Yoga Classes",
-    "subtitle": "Step into the flow following the guidance of our expert teachers. We offer a variety of yoga styles such as Vinyasa, Hatha, Kundalini and Aerial Yoga - so that everyone can find what they need. See you on the mat!",
+    "text": "Step into the flow following the guidance of our expert teachers. We offer a variety of yoga styles such as Vinyasa, Hatha, Kundalini and Aerial Yoga - so that everyone can find what they need. See you on the mat!",
     "exploreButton": "Explore Classes"
   },
   "quote": {
     "text": "What you may become is inconsequential in comparison to what you already are."
+  },
+  "events": {
+    "title": "Events",
+    "text": "Looking for something special? Have a look at our thematic workshops, retreats and teacher trainings!",
+    "exploreButton": "Explore Events"
   }
 }
