--- a/locales/es/home.json
+++ b/locales/es/home.json
@@ -5,10 +5,15 @@
   },
   "classes": {
     "title": "Clases de Yoga",
-    "subtitle": "Entra en el flujo siguiendo la guía de nuestros maestros expertos. Ofrecemos una variedad de estilos de yoga como Vinyasa, Hatha, Kundalini y Yoga Aéreo - para que todos puedan encontrar lo que necesitan. ¡Te esperamos en el tapete!",
+    "text": "Entra en el flujo siguiendo la guía de nuestros maestros expertos. Ofrecemos una variedad de estilos de yoga como Vinyasa, Hatha, Kundalini y Yoga Aéreo - para que todos puedan encontrar lo que necesitan. ¡Te esperamos en el tapete!",
     "exploreButton": "Explorar Clases"
   },
   "quote": {
     "text": "Lo que puedas llegar a ser es irrelevante en comparación con lo que ya eres."
+  },
+  "events": {
+    "title": "Eventos",
+    "text": "¿Buscas algo especial? ¡Echa un vistazo a nuestros talleres temáticos, retiros y entrenamientos para instructores!",
+    "exploreButton": "Explorar Eventos"
   }
 }
