--- a/locales/en/home.json
+++ b/locales/en/home.json
@@ -15,5 +15,13 @@
     "title": "Events",
     "text": "Looking for something special? Have a look at our thematic workshops, retreats and teacher trainings!",
     "exploreButton": "Explore Events"
+  },
+  "testimonials": {
+    "title": "What Our Students Say",
+    "subtitle": "Hear from our global yoga community",
+    "previous": "Previous",
+    "next": "Next",
+    "pause": "Pause slideshow",
+    "play": "Play slideshow"
   }
 }
