made cosmetic changes to the footer and the navbar

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -12,7 +12,7 @@
   "footer": {
     "mission": {
       "title": "Our Mission",
-      "text": "Guiding souls to discover their inner light through the transformative practice of yoga in the heart of Mexico City."
+      "text": "Guiding souls to discover their inner light through the transformative practice of yoga."
     },
     "sitemap": {
       "title": "Site Map",
