--- a/locales/es/common.json
+++ b/locales/es/common.json
@@ -12,7 +12,7 @@
   "footer": {
     "mission": {
       "title": "Nuestra Misión",
-      "text": "Guiando almas para descubrir su luz interior a través de la práctica transformadora del yoga en el corazón de la Ciudad de México."
+      "text": "Guiando almas para descubrir su luz interior a través de la práctica transformadora del yoga."
     },
     "sitemap": {
       "title": "Mapa del Sitio",
