fill class timetable with real data

--- a/locales/en/classes.json
+++ b/locales/en/classes.json
@@ -39,7 +39,7 @@
     "ana": "Ana"
   },
   "locations": {
-    "roma": "Roma Studio",
+    "roma": "Hari Om Studio",
     "aguacate": "Aguacate Studio"
   },
   "duration": {
