--- a/locales/es/classes.json
+++ b/locales/es/classes.json
@@ -39,7 +39,7 @@
     "ana": "Ana"
   },
   "locations": {
-    "roma": "Estudio Roma",
+    "roma": "Estudio Hari Om",
     "aguacate": "Estudio Aguacate"
   },
   "duration": {
