--- a/locales/en/classes.json
+++ b/locales/en/classes.json
@@ -4,10 +4,10 @@
   },
   "hero": {
     "title": "Our Classes",
-    "subtitle": "Find your practice in our weekly schedule"
+    "subtitle": "Find your Light and nourish your Soul with guidance of our expert teachers"
   },
   "intro": {
-    "text": "Join us for transformative yoga classes throughout the week. Each session is carefully designed to meet you wherever you are on your journey."
+    "text": "Join us for transformative yoga classes in CDMX! Each session is a unique experience - we offer various yoga styles and a team of amazing teachers to suit all needs. Whether you're a complete beginer or a long-time practitioner, you are welcome to join our family!"
   },
   "days": {
     "monday": "Monday",
