--- a/locales/es/classes.json
+++ b/locales/es/classes.json
@@ -69,7 +69,6 @@
   "cta": {
     "title": "¿Listo para Comenzar?",
     "text": "Únete a nosotros en una clase y descubre el poder transformador del yoga. Contáctanos para obtener más información sobre nuestro horario y próximas sesiones.",
-    "contact": "Contáctanos",
-    "bookingSoon": "Reservas en línea próximamente"
+    "contact": "Contáctanos"
   }
 }
