--- a/locales/es/classes.json
+++ b/locales/es/classes.json
@@ -4,10 +4,10 @@
   },
   "hero": {
     "title": "Nuestras Clases",
-    "subtitle": "Encuentra tu práctica en nuestro horario semanal"
+    "subtitle": "Encuentra tu Luz y nutre tu Alma con la guía de nuestros maestros expertos"
   },
   "intro": {
-    "text": "Únete a nosotros para clases de yoga transformadoras durante toda la semana. Cada sesión está cuidadosamente diseñada para encontrarte donde sea que estés en tu viaje."
+    "text": "¡Únete a nosotros para clases de yoga transformadoras en CDMX! Cada sesión es una experiencia única - ofrecemos varios estilos de yoga y un equipo de maestros increíbles para satisfacer todas las necesidades. Ya seas un principiante completo o un practicante de mucho tiempo, ¡eres bienvenido a unirte a nuestra familia!"
   },
   "days": {
     "monday": "Lunes",
@@ -51,24 +51,25 @@
     "subtitle": "Cada tipo de clase ofrece una experiencia única",
     "kundalini": {
       "name": "Kundalini Yoga",
-      "description": "Despierta tu energía interior a través de respiración, movimiento y meditación"
+      "description": "Embárcate en un viaje transformador de autodescubrimiento y crecimiento espiritual a través de una práctica intensa enfocada en el trabajo energético"
     },
     "vinyasa": {
-      "name": "Vinyasa Flow",
-      "description": "Secuencias dinámicas sincronizadas con la respiración para fuerza y enfoque"
+      "name": "Vinyasa Yoga",
+      "description": "Conéctate con tu flujo interior con secuencias dinámicas que mejoran la circulación y te ayudan a recuperar la gracia y el equilibrio"
     },
     "hatha": {
       "name": "Hatha Yoga",
-      "description": "Práctica fundamental enfocada en posturas y técnicas de respiración"
+      "description": "Construye una base sólida con un estilo de yoga versátil con raíces profundas en la tradición"
     },
     "aerial": {
       "name": "Yoga Aéreo",
-      "description": "Experimenta el yoga suspendido en hamacas de seda para una práctica única"
+      "description": "Libera el potencial de tu cuerpo con secuencias aéreas impresionantes realizadas en hamacas de seda"
     }
   },
   "cta": {
     "title": "¿Listo para Comenzar?",
-    "text": "Únete a nosotros en una clase y descubre el poder transformador del yoga. Contáctanos para obtener más información sobre nuestro horario y próximas sesiones.",
-    "contact": "Contáctanos"
+    "text": "Contáctanos para aprender más sobre nuestras clases y próximos eventos. Para respuestas rápidas, es mejor enviarnos un mensaje por WhatsApp - pero también puedes enviarnos un correo electrónico.",
+    "whatsapp": "WhatsApp",
+    "contact": "Correo Electrónico"
   }
 }
