--- a/locales/es/events.json
+++ b/locales/es/events.json
@@ -39,16 +39,15 @@
       "whatToBring": "Ropa cómoda para yoga y senderismo, artículos de higiene personal, diario, botella de agua reutilizable"
     },
     "event3": {
-      "title": "Formación de Maestros de Yoga 200 Horas",
+      "title": "Formación de Maestros de Yoga Aéreo 50 Horas",
       "category": "Formación de Maestros",
-      "date": "1 de junio - 20 de julio, 2025",
-      "time": "Fines de semana (Sáb-Dom) 9:00 AM - 5:00 PM",
-      "location": "Estudio Roma",
-      "shortDescription": "Programa de certificación integral para aspirantes a maestros de yoga",
-      "fullDescription": "Transforma tu práctica y tu vida con nuestra formación de maestros de yoga de 200 horas reconocida internacionalmente. Este programa integral cubre filosofía del yoga, anatomía, metodología de enseñanza, práctica de asanas, meditación y pranayama. Obtendrás las habilidades y la confianza para enseñar clases de yoga profesionalmente. Grupos pequeños con atención personalizada. Certificado por Yoga Alliance.",
-      "instructor": "Harjeet, Camila y Maestros Invitados",
-      "price": "$45,000 MXN (planes de pago disponibles)",
-      "whatToBring": "Tapete de yoga, accesorios, cuaderno, libro de anatomía (se proporcionan recomendaciones), corazón abierto y mente dedicada"
+      "date": "8 de noviembre - 14 de diciembre, 2025",
+      "time": "Fines de semana (Sáb-Dom)",
+      "location": "La Yoguitería, Calarca, Quindío, Colombia",
+      "shortDescription": "Conviértete en maestro de yoga aéreo con nuestro programa de formación especializado.",
+      "fullDescription": "El yoga aéreo está ganando cada vez más popularidad, no solo porque se ve genial, sino también porque hace que posturas más avanzadas sean accesibles para principiantes desde el día 1. Nuestro programa híbrido de 50 horas es ideal para maestros de yoga que desean ampliar su repertorio, pero también puedes participar como principiante absoluto. Nuestras sesiones se llevarán a cabo los fines de semana en la hermosa Yoguitería en Calarca, Colombia. Aunque diseñada principalmente como una experiencia presencial, esta formación de maestros puede tomarse parcialmente en línea, pero se requieren dos fines de semana presenciales para obtener tu certificación de Yoga Alliance.",
+      "instructor": "Camila y Harjeet",
+      "price": "10,000 MXN"
     },
     "event4": {
       "title": "Introducción al Yoga Aéreo",
